--- a/package.json
+++ b/package.json
@@ -1,9 +1,26 @@
 {
   "name": "react-boilerplate",
   "version": "0.1.0",
-  "private": true,
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "check": "npx eslint -c eslint.config.mjs .",
+    "check-fix": "npx eslint -c eslint.config.mjs --fix .",
+    "prettify": "npx prettier --config .prettierrc --write .",
+    "lint": "npm run check-fix && npm run prettify",
+    "reinstall": "rd /s /q node_modules && npm i"
+  },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-redux": "^8.1.3",
+    "redux-saga": "^1.3.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.16.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.5.2",
@@ -11,18 +28,13 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-redux": "^8.1.3",
+    "eslint": "^8.57.1",
+    "eslint-plugin-react": "^7.37.2",
+    "globals": "^15.12.0",
+    "prettier": "3.4.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "typescript-eslint": "^8.16.0"
   },
   "eslintConfig": {
     "extends": [
