--- a/package.json
+++ b/package.json
@@ -10,13 +10,21 @@
     "check-fix": "npx eslint -c eslint.config.mjs --fix .",
     "prettify": "npx prettier --config .prettierrc --write .",
     "lint": "npm run check-fix && npm run prettify",
-    "reinstall": "rd /s /q node_modules && npm i"
+    "reinstall": "rd /s /q node_modules && npm i",
+    "analyze": "npx cra-bundle-analyzer"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@mui/material": "^6.1.9",
     "@reduxjs/toolkit": "^1.9.7",
+    "axios": "^1.7.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-redux": "^8.1.3",
+    "react-router-dom": "^7.0.1",
     "redux-saga": "^1.3.0"
   },
   "devDependencies": {
@@ -28,11 +36,15 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "cra-bundle-analyzer": "^0.1.1",
+    "cross-env": "^7.0.3",
     "eslint": "^8.57.1",
     "eslint-plugin-react": "^7.37.2",
     "globals": "^15.12.0",
     "prettier": "3.4.1",
     "react-scripts": "5.0.1",
+    "rimraf": "^6.0.1",
+    "sharp-cli": "^5.1.0",
     "typescript": "^4.9.5",
     "typescript-eslint": "^8.16.0"
   },
