--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "reinstall-f": "rimraf package-lock.json && rimraf node_modules && npm cache clean -f && npm i",
     "analyze": "npx cra-bundle-analyzer",
     "test-smoke": "node ./scripts/smoke-test.js",
-    "test-lighthouse": "node ./scripts/lighthouse.js"
+    "test-lighthouse": "node ./scripts/lighthouse.js",
+    "start-env": "set \"REACT_APP_NOT_SECRET_CODE=abcdef\" && npm start"
   },
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
@@ -27,10 +28,9 @@
     "axios": "^1.7.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
     "react-redux": "^8.1.3",
-    "react-router-dom": "^7.0.1",
+    "react-router-dom": "^7.0.2",
     "redux-saga": "^1.3.0"
   },
   "devDependencies": {
@@ -46,6 +46,7 @@
     "cra-bundle-analyzer": "^0.1.1",
     "eslint": "^8.57.1",
     "eslint-plugin-react": "^7.37.2",
+    "eslint-config-react-app": "^7.0.1",
     "globals": "^15.12.0",
     "prettier": "3.4.1",
     "react-scripts": "5.0.1",
